Switch to patched wpdirauth

--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -189,6 +189,9 @@ body {
             position: relative;
             top: 2px;
         }
+        input[type=submit] {
+            @extend .radius;
+        }
         p {
             margin: 0;
         }
