--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -35,9 +35,9 @@ body {
 }
 
 /* Header and menu */
+$menu-padding: rem-calc(18);
+
 #site-header {
-    padding-top: rem-calc(16);
-    padding-bottom: rem-calc(16);
     background-color: $site-header-bg-color;
     box-shadow: rgba(0,0,0,0.3) 0px 1px 2px 0px;
 
@@ -45,35 +45,148 @@ body {
         @include grid-row();
         position: relative;
     }
-}
-.site-title {
-    float: left;
-    padding-left: rem-calc(16);
+    .site-title {
+        @include grid-column(3);
+        a {
+            display: block;
+            padding-top: $menu-padding;
+            padding-bottom: $menu-padding;
+        }
+    }
 }
 #menu {
-    float: right;
-    padding-right: rem-calc(50);
+
+    @include grid-column(9);
     text-transform: uppercase;
     font-weight: 600;
 
     .menu-toggle {
-        display: none;
         position: absolute;
-        right: rem-calc(16);
+        right: rem-calc(4);
+        top: rem-calc(14);
+
+        @media #{$large-up} {
+            display: none;
+        }
+
+        svg {
+            width: 32px;
+            height: 24px;
+        }
+
+        g {
+            fill: $primary-color;
+        }
+
+        &:hover g {
+            fill: darken($primary-color, 5%);
+        }
     }
     ul {
         list-style: none;
         padding: 0;
         margin: 0;
         line-height: 1;
-        li {
+        li a {
             display: block;
-            float: left;
-            padding-right: rem-calc(20);
+        }
+    }
+    .main-menu {
+        text-align: right;
+        display: none;
+        padding-top: $menu-padding * 2 + rem-calc(6);
 
-            &:last-child {
+        @media #{$large-up} {
+            display: block;
+            padding-top: 0;
+        }
+
+        li {
+            @media #{$large-up} { float: left; }
+
+            a {
+                display: block;
+                padding-left: rem-calc(20);
+                padding-top: $menu-padding;
+                padding-bottom: $menu-padding;
+
+            }
+            &:first-child a {
+                padding-left: 0;
+            }
+        }
+    }
+    .user-menu-wrap {
+        display: none;
+
+        @media #{$large-up} {
+            display: block;
+            font-size: rem-calc(14);
+            position: absolute;
+            top: 0;
+            right: rem-calc(16);
+            margin-top: rem-calc(5);
+        }
+
+        .profile-badge {
+            display: block;
+            height: 40px;
+            text-align: right;
+
+            @media #{$large-up} {
+                background-color: #fff;
+                border-radius: 50px;
+                //@extend .card-z1;
+                box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+            }
+
+            img {
+                max-height: 100%;
+                border-radius: 50%;
+                padding: rem-calc(4);
                 padding-right: 0;
             }
+        }
+
+        .user-menu {
+            @media #{$large-up} {
+                display: none;
+                background-color: white;
+                overflow: hidden;
+                padding: 0 rem-calc(16);
+                font-size: rem-calc(14);
+                margin-top: rem-calc(5);
+            }
+
+            //@extend .card-z1;
+            box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+            @extend .radius;
+            text-align: right;
+            position: relative;
+            z-index: 1;
+
+            li a {
+                padding-top: rem-calc(18);
+                padding-bottom: rem-calc(18);
+            }
+        }
+        &:hover .user-menu {
+            display: block;
+        }
+        .icon-down {
+            font-size: rem-calc(12);
+            font-style: normal;
+            display: inline-block;
+            padding-left: rem-calc(6);
+            transform: rotate(90deg);
+            top: -5px;
+            position: relative;
+        }
+        .profile-inner {
+            display: inline-block;
+            padding-left: rem-calc(10);
+
+            @media #{$large-up} { padding: 0 rem-calc(10); }
         }
     }
 }
@@ -113,13 +226,6 @@ body {
 }
 
 /* Single */
-#content {
-    .page-title,
-    .page,
-    .post {
-        padding-left: rem-calc(16);
-    }
-}
 
 .text-body {
     @extend .card;
@@ -321,4 +427,8 @@ input[type=submit]{
     margin: 0;
     border: 0;
     padding: 0;
+}
+
+.visible {
+    display: block !important;
 }
