--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -97,16 +97,39 @@ $menu-padding: rem-calc(18);
 
             a {
                 display: block;
-                padding-left: rem-calc(20);
+                padding-left: rem-calc(10);
+                padding-right: rem-calc(10);
                 padding-top: $menu-padding;
                 padding-bottom: $menu-padding;
 
             }
-            &:first-child a {
-                padding-left: 0;
+            &.menu-item-has-children:hover .sub-menu {
+                display: block;
             }
         }
     }
+    @media #{$large-up} {
+        .sub-menu {
+            display: none;
+            position: absolute;
+            background-color: $site-header-bg-color;
+            li {
+                float: none;
+                a {
+                    text-align: left;
+                    padding-right: rem-calc(10);
+                    border-left: 4px solid transparent;
+                    &:hover {
+                        border-left: 4px solid $secondary-color;
+                    }
+                }
+                &:first-child a {
+                    padding-left: rem-calc(10);
+                }
+            }
+        }
+    }
+    /* User Menu */
     .user-menu-wrap {
         display: none;
 
@@ -132,7 +155,6 @@ $menu-padding: rem-calc(18);
             @media #{$large-up} {
                 background-color: #fff;
                 border-radius: rem-calc(50);
-                //@extend .card-z1;
                 box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
             }
 
@@ -154,13 +176,14 @@ $menu-padding: rem-calc(18);
                 overflow: hidden;
                 font-size: rem-calc(14);
                 margin-top: rem-calc(7);
-                //@extend .card-z1;
                 box-shadow: rgba(0,0,0,0.14902) 0px 1px 0px 0px, rgba(0,0,0,0.09804) 0px 1px 2px 0px;
 
                 a {
                     color: #333;
+                    border-left: 4px solid transparent;
                     &:hover {
                         background-color: darken(white, 3%);
+                        border-left: 4px solid lighten($secondary-color, 50%);
                     }
                 }
             }
@@ -169,6 +192,8 @@ $menu-padding: rem-calc(18);
                 padding-top: $menu-padding;
                 padding-bottom: $menu-padding;
 
+                padding-left: rem-calc(10);
+                padding-right: rem-calc(10);
                 @media #{$large-up} {
                     padding-left: rem-calc(16);
                     padding-right: rem-calc(16);
@@ -190,6 +215,7 @@ $menu-padding: rem-calc(18);
         .profile-inner {
             display: inline-block;
             padding-left: rem-calc(10);
+            padding-right: rem-calc(4);
 
 
             @media #{$large-up} {
@@ -376,6 +402,29 @@ input[type=submit]{
                 }
             }
         }
+    }
+}
+/* Profile page */
+.profile {
+    .page-title {
+        @include grid-column(12);
+        margin-top: rem-calc(16);
+    }
+    .profile-details,
+    .account-details {
+        @include grid-column(12);
+
+        @media #{$large-up} {
+            @include grid-column(6);
+        }
+        .inner {
+            @extend .card;
+            padding-left: rem-calc(16);
+            padding-right: rem-calc(16);
+        }
+    }
+    h5 {
+        margin-top: rem-calc(8);
     }
 }
 
