--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -9,8 +9,9 @@ $header-font-color: #000;
 $primary-color: darken(#E99835, 5%);
 $secondary-color: #008CBA;
 
-$label-bg-color: #FF1F00;
+$label-bg-color: lighten(#FF1F00, 10%);
 $site-header-bg-color: #333;
+
 
 @import "foundation/components/global";
 
@@ -20,6 +21,8 @@ $table-row-padding: rem-calc(12 16);
 
 $row-width: rem-calc(1250);
 $column-gutter: rem-calc(30);
+
+$padding-base: rem-calc(16);
 
 @import "foundation/components/grid";
 @import "foundation/components/block-grid";
@@ -279,44 +282,62 @@ $menu-padding: rem-calc(18);
 /* Single */
 .text-body {
     @extend .card;
-    padding-left: rem-calc(16);
-    padding-right: rem-calc(16);
+    padding-left: $padding-base;
+    padding-right: $padding-base;
     margin-bottom: rem-calc(32);
+    position: relative;
 }
-
+.entry-title {
+    display: inline-block;
+}
 .entry-meta {
+    display: inline-block;
     margin-bottom: rem-calc(10);
     font-weight: 300;
+    color: #666;
     clear: both;
 }
 .entry-content {
     margin-top: rem-calc(20);
+    &.excerpt p {
+        margin-bottom: 8px;
+    }
 }
 .entry-category {
-    padding-bottom: rem-calc(30);
+    font-weight: 300;
+    color: #666;
 
-    .post-categories {
-        list-style: none;
-        padding: 0;
-        margin: 0;
+    .dashicons-tag {
+        font-size: rem-calc(18);
+        vertical-align: baseline;
+        position: relative;
+        top: 3px;
+        left: -2px;
     }
-    li {
-        display: block;
-        float: left;
-        padding-right: rem-calc(6);
-        &:last-child {
-            padding-right: 0;
-        }
-    }
-    a {
+    .label-category {
         @include label(
-            $padding: 0.5em 0.7em,
+            $padding: 2px 7px 7px,
             $text-size: rem-calc(14),
             $bg: $label-bg-color,
             $radius:4px
         );
+        margin-bottom: 8px;
     }
 }
+
+.read-more {
+    padding: 10px 16px;
+    margin-bottom: 8px;
+}
+.actions-container {
+    text-align: right;
+    @include clearfix();
+}
+.comments-link {
+    float: left;
+    padding-top: rem-calc(20);
+}
+
 /* Login */
 .page-login {
     #content {
