--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -459,13 +459,10 @@ input[type=submit]{
 
 /* Mailinglists page */
 .page-mailinglists {
-    .page-title {
-        @include grid-column(12);
-    }
+    .page-title,
+    .search-about,
+    .lists-list-wrap,
     .sort-by {
-        @include grid-column(12);
-    }
-    .lists-list-wrap {
         @include grid-column(12);
     }
     .list-members-wrap {
