--- a/wp-content/themes/aktiv2014/app/styles/main.scss
+++ b/wp-content/themes/aktiv2014/app/styles/main.scss
@@ -461,6 +461,8 @@ input[type=submit]{
 
 /* Mailinglists page */
 .page-mailinglists {
+    margin-top: rem-calc(18);
+
     .page-title,
     .search-about,
     .lists-list-wrap,
